--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@arcjet/bun": "^1.0.0-beta.16",
+    "@arcjet/inspect": "^1.0.0-beta.16",
     "@neondatabase/serverless": "^1.0.2",
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.10",
