--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,11 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
 # dotenv environment variable files
 .env
+.env.development
 .env.development.local
-.env.test.local
+.env.production
 .env.production.local
+.env.test.local
 .env.local
 
 # caches
@@ -34,4 +36,4 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 .DS_Store
 
 # Drizzle
-drizzle/
+drizzle/.neon_local/
