--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -8,14 +6,12 @@ services:
       target: release
     container_name: dev_ops_compare_app_prod
     ports:
-      - '${PORT:-3000}:3000'
-    environment:
-      - NODE_ENV=production
-      - DATABASE_URL=${DATABASE_URL}
-      - PORT=${PORT:-3000}
-      - ARCJET_KEY=${ARCJET_KEY}
+      - '3000:3000'
     env_file:
       - .env.production
+    environment:
+      NODE_ENV: production
+      PORT: 3000
     restart: unless-stopped
 
 networks:
